Revert "Fix misaligned input dropdown"
This reverts commit a40a4c0e8d52471dea01e6727f741a737b798695.

--- a/common/containers/Tabs/Swap/components/CurrencySwap.scss
+++ b/common/containers/Tabs/Swap/components/CurrencySwap.scss
@@ -34,7 +34,8 @@
   }
   &-dropdown {
     display: inline-block;
-    margin: 0.5rem;
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
   }
 
   &-input {
