--- a/common/sass/styles/overrides/forms.scss
+++ b/common/sass/styles/overrides/forms.scss
@@ -2,7 +2,6 @@
 @import 'common/sass/variables';
 
 label {
-  display: block;
   margin-bottom: $space-xs;
   font-size: $font-size-bump-more;
 
@@ -31,8 +30,6 @@ input[readonly] {
 }
 
 .form-control {
-  padding: 8px 16px;
-  height: auto;
   margin-top: $space-sm;
   margin-bottom: $space-sm;
   transition: $transition;
